testcases/error/no_initial_block.veryl
module no_initial_block (
    a: input  logic<8>,
    b: output logic<8>,
) {
    assign b = a + 1;
}
